--- a/style.css
+++ b/style.css
@@ -1,22 +1,31 @@
 body{
     font-family: 'Lobster', cursive;
     font-family: 'Poppins', sans-serif;
-    
+    margin: 0;
 }
 h1{
-    font-size: 40px;
-    font-style:;
+    font-size: 50px;
     
 }
-.gold-color{
-    color: gold;
+.coral-color{
+    color: coral;
 }
-section{
+.heading h1{
+    border-left: 5px solid;
+    border-image: linear-gradient(DarkCyan, Cyan);
+    border-image-slice: 1;
+
+
+}
+.flexible-container{
     display: flex;
+    margin-bottom: 100px;
+    
 }
 .half-width{
     width: 50%;
-    padding: 10%;
+    padding-left: 10%;
+    padding-top: 5%;
 }
 .half-width img{
     width: 80%;
@@ -27,6 +36,80 @@ section{
     padding: 10px 40px;
     border-radius: 5px;
     color: white;
+}
+#about-us{
+    padding-top: 20px;
+}
+.mission-area h1{
+    text-align: center;
+}
+.mission-item{
+    width: 20%;
+    margin: 1%;
+    border-radius: 25px;
+    box-shadow: 10px 10px 40px gray;
+    padding: 1%;
+
     
     
+}
+.mission-item img{
+    width: 50%;
+    border-radius: 10px;
+
+}
+.second-half-background{
+    background-image: url(images/shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    
+}
+.second-half-width{
+    width: 50%;
+    padding-right: 10%;
+    padding-top: 5%;
+    
+}
+.second-half-width img{
+    width: 80%;
+    padding-left: 2%;
+
+}
+.third-half-background{
+    background-image: url(images/shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    
+
+}
+.service-area h1{
+    text-align: center;
+}
+.service-item{
+    width: 20%;
+    margin: 1%;
+    border-radius: 5px;
+    box-shadow: 10px 10px 40px gray;
+    padding: 1%;
+    color: white;
+}
+.service-item h2{
+    text-align: center;
+}
+footer{
+    height: 150px;
+    background-color: black;
+}
+footer h3{
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    padding-top: 20px;
+
+    
+}
+footer p{
+    text-align: center;
+    color: white;
+
 }
