--- a/style.css
+++ b/style.css
@@ -10,22 +10,26 @@ h1{
 .coral-color{
     color: coral;
 }
+
 .heading h1{
     border-left: 5px solid;
-    border-image: linear-gradient(DarkCyan, Cyan);
+    border-image: linear-gradient(FireBrick, OrangeRed);
     border-image-slice: 1;
+    padding: 1%;
 
 
 }
 .flexible-container{
     display: flex;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
     
 }
 .half-width{
     width: 50%;
     padding-left: 10%;
-    padding-top: 5%;
+    padding-top: 8%;
+    text-align: justify;
+    
 }
 .half-width img{
     width: 80%;
@@ -37,61 +41,57 @@ h1{
     border-radius: 5px;
     color: white;
 }
-#about-us{
+#more-about{
     padding-top: 20px;
+}
+.mission-area{
+    margin-left: 9%;
 }
 .mission-area h1{
     text-align: center;
 }
 .mission-item{
-    width: 20%;
+    width: 320px;
     margin: 1%;
     border-radius: 25px;
     box-shadow: 10px 10px 40px gray;
     padding: 1%;
-
-    
-    
+    text-align: justify;
 }
 .mission-item img{
-    width: 50%;
+    width: 60%;
     border-radius: 10px;
 
-}
-.second-half-background{
-    background-image: url(images/shapes/shape-1.png);
-    background-repeat: no-repeat;
-    background-position: left;
-    
 }
 .second-half-width{
     width: 50%;
     padding-right: 10%;
     padding-top: 5%;
-    
+    text-align: justify;
 }
 .second-half-width img{
     width: 80%;
-    padding-left: 2%;
-
+    padding-left: 25%;
 }
-.third-half-background{
-    background-image: url(images/shapes/shape-1.png);
-    background-repeat: no-repeat;
-    background-position: right;
+.service-area{
+    margin-left: 9%;
+}
+    
+.service-area h1{
+    text-align: center;
+    padding-left: 0%;
     
 
 }
-.service-area h1{
-    text-align: center;
-}
 .service-item{
-    width: 20%;
+    width: 320px;
     margin: 1%;
     border-radius: 5px;
     box-shadow: 10px 10px 40px gray;
     padding: 1%;
     color: white;
+    text-align: justify;
+    background-color: Teal;
 }
 .service-item h2{
     text-align: center;
